# claimreview-collector

./: .dockerignore  .gitignore  .pdm.toml  Dockerfile  README.md  README_new.md  README_old.md  aggregate.py  appearances_analyser.py  appearances_analyser_similarity.py  buzzface.py  buzzfeednews.py  cache_manager.py  claimreview.py  clean_sample.py  clean_sample_ukraine.py  database_builder.py  datacommons_factcheck.py  datacommons_feeds.py  debug.py  dev-requirements.in  dev-requirements.txt  domain_list.py  extract_claim_reviews.py  extract_tweet_reviews.py  factcheck_org.py  factcheckni.py  factcheckni_list.py  fakenewsnet.py  fullfact.py  golbeck_fakenews.py  google_factcheck_explorer.py  hyperpartisan.py  ifcn.py  jruvika_fakenews.py  leadstories.py  liar.py  mrisdal_fakenews.py  opensources.py  politifact.py  (+21 more)
.github/workflows/: build.yaml  main.yaml  pr.yaml  update.yaml
claimreview_collector/: __init__.py  __main__.py  main.py
claimreview_collector/processing/: cache_manager.py  claimreview.py  data_manager.py  database_builder.py  extract_claim_reviews.py  extract_tweet_reviews.py  flaresolverr.py  ukraine_retrieve.py  unshortener.py  utils.py  webarchives.py
claimreview_collector/publishing/: github.py
claimreview_collector/routers/: data.py
claimreview_collector/scrapers/implementations/: __init__.py  datacommons_feeds.py  datacommons_research_dataset.py  euvsdisinfo.py  fullfact.py  google_factcheck_explorer.py  istinomer.py  leadstories.py  politifact.py  poynter_covid.py  snopes.py  ukrainefacts.py  weeklystandard.py
claimreview_scraper/: __init__.py  __main__.py  logger.py  main.py
claimreview_scraper/cli/: commands.py
claimreview_scraper/processing/: aggregate.py  cache_manager.py  claimreview.py  database_builder.py  extract_claim_reviews.py  extract_tweet_reviews.py  flaresolverr.py  sources.json  unshortener.py  utils.py  webarchives.py
claimreview_scraper/processing/datasets/: buzzface.py  factcheckni_list.py  fakenewsnet.py  several27_fakenews.py  vlachos_factchecking.py
claimreview_scraper/processing/datasets_deprecated/: buzzface.py  buzzfeednews.py  domain_list.py  factcheckni_list.py  fakenewsnet.py  golbeck_fakenews.py  hyperpartisan.py  (+9 more)
claimreview_scraper/publishing/: github.py
claimreview_scraper/routers/: data.py
claimreview_scraper/scrapers/: __init__.py  __main__.py  datacommons_feeds.py  datacommons_research_dataset.py  esi_api.py  euvsdisinfo.py  factcheck_org.py  factcheckni.py  fullfact.py  google_factcheck_explorer.py  istinomer.py  kallxo_kripometer.py  leadstories.py  lemonde_decodex_hoax.py  metafact.py  metafact.py.broken  politifact.py  snopes.py  teyit_org.py  truthsetter.py.broken  washingtonpost.py  weeklystandard.py
datasets/: __main__.py  logger.py
datasets/cli/: commands.py
datasets/processing/: aggregate.py  cache_manager.py  claimreview.py  database_builder.py  sources.json  stub.py  utils.py
datasets/scrapers/: esi_api.py  euvsdisinfo.py  fiskkit.py  fullfact.py  google_factcheck_explorer.py  istinomer.py  kallxo_kripometer.py  snopes.py  teyit_org.py  truthsetter.py  weeklystandard.py
tests/: test_processing_cache_manager.py  test_processing_claimreview.py  test_processing_database_builder.py
(+55 files in other folders)
