[tool.pdm]

[project]
name = "claimreview_collector"
version = "0.1.0"
description = "ClaimReview Scraper for MisinfoMe"
authors = [
    {name = "Martino Mensio", email = "martino.mensio@open.ac.uk"},
]
dependencies = [
    "requests",
    "tqdm",
    "extruct",
    "flatten-json",
    "python-dotenv",
    "pymongo",
    "tldextract",
    "beautifulsoup4",
    "lxml",
    "fastapi",
    "uvicorn",
    "dateparser",
    "unidecode",
    "schedule",
    "goose3",
    "scipy",
    "jellyfish!=0.11.2",
    "pandas",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]  # This is dev dependencies
dev1 = [
    "pytest",
    "coveralls",
]
dev2 = [
    "ipykernel",
    "nbformat",
    "plotly",
    "black",
    #"tensorflow-text",
    "scikit-learn",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
