[tool.pdm]

[project]
name = "claimreview_collector"
version = "0.1.0"
description = "ClaimReview Scraper for MisinfoMe"
authors = [{ name = "Martino Mensio", email = "martino.mensio@open.ac.uk" }]
dependencies = [
    "requests",
    "certifi>=2023.11.17",
    "tqdm",
    "extruct",
    "flatten-json",
    "python-dotenv",
    "pymongo",
    "tldextract",
    "beautifulsoup4",
    "lxml",
    "fastapi",
    "uvicorn",
    "dateparser",
    "unidecode",
    "schedule",
    "goose3",
    "jellyfish",
    # on musllinux they are installed from anaconda
    # on other architectures they are installed from dev3
    # "scipy",
    # "numpy",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies] # This is dev dependencies
test = [
    "pytest",
    "coveralls",
    "ipykernel",
    "nbformat",
    "plotly",
    # these 3 are installed as dev
    "pandas",
    # "scipy", # this breaks pipeline
    # "numpy", # this breaks stuff, but if commented out it is installed anyways (fixing pipeline)
]
lint = ["black"]

[tool.pdm.resolution]
respect-source-order = true

[[tool.pdm.source]]
name = "anaconda"
url = "https://pypi.anaconda.org/scipy-wheels-nightly/simple"
verify_ssl = true


[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
